new section corporativo

--- a/contenido/brochure.html
+++ b/contenido/brochure.html
@@ -3,9 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Valoros</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link rel="stylesheet" href="../css/bootstrap.css" />
     <link rel="stylesheet" href="../css/valoros.css" />
     <link rel="icon" href="../img/LogoValoros -icono.jpg" />
@@ -26,17 +25,16 @@
                     </a>
                     <ul class="py-2">
                         <li class="menu-item">
-                            <a class="text-decoration-none" href="corporativo.html">
-                                Nuestra hitoria
-                            </a>
+                            <a class="text-decoration-none" href="corporativo.html">Nuestra
+                                hitoria</a>
                         </li>
                         <li class="menu-item">
-                            <a class="text-decoration-none active" href="compromiso.html">
-                                Nuestro compromiso legal
-                            </a>
+                            <a class="text-decoration-none" href="compromiso.html">Nuestro
+                                compromiso legal</a>
                         </li>
                         <li class="menu-item">
-                            <a class="text-decoration-none" href="brochure.html">Corporativo</a>
+                            <a class="text-decoration-none active" href="brochure.html">Nuestro
+                                Corporativo</a>
                         </li>
                     </ul>
                 </li>
@@ -81,18 +79,18 @@
                                 <a class="nav-link" href="corporativo.html">Nuestra hitoria</a>
                             </li>
                             <li>
-                                <a class="nav-link active" href="compromiso.html">Nuestro compromiso legal</a>
+                                <a class="nav-link" href="compromiso.html">Nuestro compromiso legal</a>
                             </li>
                             <li>
-                                <a class="nav-link" href="brochure.html">Corporativo</a>
+                                <a class="nav-link active" href="brochure.html">Corporativo</a>
                             </li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fs-4" href="sostenibilidad.html">Sostenibilidad</a>
+                        <a class="nav-link fs-5" href="sostenibilidad.html">Sostenibilidad</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fs-4" href="contacto.html">Contáctenos</a>
+                        <a class="nav-link fs-5" href="contacto.html">Contáctenos</a>
                     </li>
                 </ul>
             </div>
@@ -100,7 +98,7 @@
         </header>
         <!-- logo-menu -->
 
-        <main class="mx-auto mb-1">
+        <main class="mx-auto">
 
             <!-- menu:productos-servicios -->
             <section class="p-0 m-0">
@@ -123,84 +121,26 @@
                         </li>
 
                         <li>
-                            <a class="h-100 p-2" href="Servicios.html">Servicios</a>
+                            <a class="h-100 p-2" href="Servicios.html">Servicios Metalurgicos</a>
                         </li>
 
                     </ul>
                 </nav>
             </section>
             <!-- fin menu:productos-servicios -->
+            <h1 class="text-center my-4">Corporativo</h1>
+            <section class="text-center">
+                <iframe width="800" height="450" src="https://www.youtube.com/embed/uy7NSPctxkE?si=BDNwzhFAn9bE7Xd_"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen autoplay>
+                </iframe>
+            </section>
 
             <section class="mt-5 px-5">
-
-                <h1 class="text-center mb-5">COMPROMISO LEGAL</h1>
-
-                <h5>Politica General</h5>
-
-                <div class="row">
-
-                    <div class="col-12 col-sm-6">
-
-                        <p>
-                            Respetar la ley y anteponer el comportamiento ético en el desarrollo de la misión, los
-                            objetivos
-                            sociales y metas comerciales promoviendo en todos los grupos de interés el respeto por el
-                            cumplimiento normativo y el rechazo hacia conductas que van en contra de delitos asociados a
-                            LAFT/FPADM.
-                        </p>
-
-                        <p>
-                            Para Valoros de Colombia es prioridad sostener excelentes relaciones con sus aliados
-                            estratégicos
-                            basada en sus pilares fundamentales como la confianza, responsabilidad y transparencia;
-                            además de
-                            dar cumplimiento con la normativa vigente a nivel organizacional apoyado en su estructura
-                            corporativa.
-                        </p>
-
-                        <P>
-                            La compañía VALOROS DE COLOMBIA por pertenecer a un sector de la economía vulnerable y
-                            susceptible
-                            de ser utilizada con fines criminales, ha adoptado un sistema de gestión del riesgo
-                            LAFT/FPADM -,
-                            cumpliendo con las normas establecidas por los entes competentes así como las
-                            recomendaciones y
-                            mejores prácticas empresariales presentadas en esta materia, principalmente las del Grupo de
-                            Acción
-                            Financiera Internacional sobre el Dinero - GAFI, y la Organización para la Cooperación y
-                            Desarrollo
-                            económico - OCDE.
-                        </P>
-
-                        <P>
-                            Las políticas, controles y procedimientos implementados, dentro de un concepto de
-                            administración del
-                            riesgo, son acciones que buscan la debida diligencia y debida diligencia intensificada para
-                            prevenir
-                            el uso de la compañía por elementos criminales para propósitos ilícitos. Dichas acciones
-                            incluyen,
-                            entre otros aspectos, el conocimiento del tercero (aportantes, beneficiarios, empleados y
-                            fundadores) y sus operaciones, la definición de segmentos de mercado atendidos por factor de
-                            riesgo
-                            y el envío de reportes a las autoridades competentes. . De tal forma, la compañía dispone de
-                            un
-                            manual SAGRILAFT en el cual se describen las políticas institucionales entorno a la
-                            prevención de
-                            LA/FT/FPADM, las metodologías para la adecuada gestión del riesgo de LA/FT/FPADM, los
-                            procedimientos
-                            que deben seguirse para la prevención del riesgo, así como los mecanismos e instrumentos de
-                            control
-                            para resguardarse del mencionado delito.
-                        </p>
-
-                    </div>
-
-                    <div class="col-12 col-sm-6">
-                        <img class="w-100" src="../img/6.jpg" alt="">
-                    </div>
-
-                </div>
-
+                <iframe src="../pdf/Brochure digital VALOROS DE COLOMBIA-2023.pdf" width="100%" height="800px"
+                    frameborder="0">
+                </iframe>
             </section>
 
         </main>
@@ -230,7 +170,6 @@
 
     </div>
 
-    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
