--- a/contenido/contacto.html
+++ b/contenido/contacto.html
@@ -33,6 +33,9 @@
                             <a class="text-decoration-none" href="compromiso.html">Nuestro
                                 compromiso legal</a>
                         </li>
+                        <li>
+                            <a class="nav-link" href="brochure.html">Corporativo</a>
+                        </li>
                     </ul>
                 </li>
                 <li class="menu-item">
