--- a/contenido/lineaplata.html
+++ b/contenido/lineaplata.html
@@ -33,6 +33,9 @@
                             <a class="text-decoration-none" href="compromiso.html">Nuestro
                                 compromiso legal</a>
                         </li>
+                        <li class="menu-item">
+                            <a class="text-decoration-none" href="brochure.html">Corporativo</a>
+                        </li>
                     </ul>
                 </li>
                 <li class="menu-item">
@@ -110,6 +113,9 @@
                                 </li>
                                 <li>
                                     <a class="nav-link" href="lineaplata.html">Linea de Plata</a>
+                                </li>
+                                <li>
+                                    <a class="nav-link" href="brochure.html">Corporativo</a>
                                 </li>
                             </ul>
                         </li>
