--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
                             <a class="text-decoration-none text-white" href="contenido/compromiso.html">Nuestro
                                 compromiso legal</a>
                         </li>
+                        <li class="menu-item">
+                            <a class="text-decoration-none text-white" href="contenido/brochure.html">
+                                Corporativo</a>
+                        </li>
                     </ul>
                 </li>
                 <li class="menu-item">
@@ -81,6 +85,9 @@
                             </li>
                             <li>
                                 <a class="nav-link" href="contenido/compromiso.html">Nuestro compromiso legal</a>
+                            </li>
+                            <li>
+                                <a class="nav-link" href="contenido/brochure.html">Corporativo</a>
                             </li>
                         </ul>
                     </li>
@@ -173,20 +180,12 @@
 
             <!-- croquis-contacta -->
             <section class="row px-5">
-                <!-- <div class="row"> -->
-
-                <!-- <div class="col-12 col-sm-7 mb-3">
-                        <img class="w-100" src="img/croquis.png" alt="croquis" />
-                    </div> -->
 
                 <div class="d-flex align-items-center justify-content-center my-5">
                     <div>
                         <h3 class="text-center" style="color: #F3B830;">Contacta con nosotros</h3>
 
-                        <div class="text-center">
-                            <!-- <a href="#"><img class="social-icon" src="img/facebook.svg" alt="facebook" /></a>
-                                <a href="#"><img class="social-icon" src="img/insta.svg" alt="whatsapp" /></a>
-                                <a href="#"><img class="social-icon" src="img/whatsapp-black.svg" alt="whatsapp" /></a> -->
+                        <div class="text-center">                          
                             <a href="#" style="color:transparent">
                                 <i class='bx bxl-facebook-square text-white fs-2'></i>
                             </a>
@@ -200,14 +199,9 @@
                     </div>
                 </div>
 
-                <!-- </div> -->
-
             </section>
-            <!-- croquis-contacta -->
-
+     
         </main>
-
-
 
 
         <footer>
