--- a/contenido/Servicios.html
+++ b/contenido/Servicios.html
@@ -35,6 +35,10 @@
                             <a class="text-decoration-none" href="compromiso.html">Nuestro
                                 compromiso legal</a>
                         </li>
+                        <li class="menu-item">
+                            <a class="text-decoration-none" href="brochure.html">
+                                Corporativo</a>
+                        </li>                       
                     </ul>
                 </li>
                 <li class="menu-item">
@@ -79,6 +83,9 @@
                             </li>
                             <li>
                                 <a class="nav-link" href="compromiso.html">Nuestro compromiso legal</a>
+                            </li>
+                            <li>
+                                <a class="nav-link" href="brochure.html">Corporativo</a>
                             </li>
                         </ul>
                     </li>
