--- a/contenido/corporativo.html
+++ b/contenido/corporativo.html
@@ -78,6 +78,9 @@
                             <li>
                                 <a class="nav-link" href="compromiso.html">Nuestro compromiso legal</a>
                             </li>
+                            <li class="menu-item">
+                                <a class="text-decoration-none" href="brochure.html">Corporativo</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -110,6 +113,9 @@
                                 </li>
                                 <li>
                                     <a class="nav-link" href="lineaplata.html">Linea de Plata</a>
+                                </li>
+                                <li>
+                                    <a class="nav-link" href="brochure.html">Corporativo</a>
                                 </li>
                             </ul>
                         </li>
