--- a/contenido/sostenibilidad.html
+++ b/contenido/sostenibilidad.html
@@ -32,6 +32,9 @@
                             <a class="text-decoration-none" href="compromiso.html">Nuestro
                                 compromiso legal</a>
                         </li>
+                        <li class="menu-item">
+                            <a class="text-decoration-none" href="brochure.html">Corporativo</a>
+                        </li>
                     </ul>
                 </li>
                 <li class="menu-item">
@@ -76,6 +79,9 @@
                             </li>
                             <li>
                                 <a class="nav-link" href="compromiso.html">Nuestro compromiso legal</a>
+                            </li>
+                            <li>
+                                <a class="nav-link" href="brochure.html">Corporativo</a>
                             </li>
                         </ul>
                     </li>
