--- a/contenido/brochure.html
+++ b/contenido/brochure.html
@@ -26,7 +26,7 @@
                     <ul class="py-2">
                         <li class="menu-item">
                             <a class="text-decoration-none" href="corporativo.html">Nuestra
-                                hitoria</a>
+                                historia</a>
                         </li>
                         <li class="menu-item">
                             <a class="text-decoration-none" href="compromiso.html">Nuestro
@@ -76,7 +76,7 @@
                         </a>
                         <ul class="submenu py-2" style="background-color: white;z-index: 100; border: 1px solid;">
                             <li>
-                                <a class="nav-link" href="corporativo.html">Nuestra hitoria</a>
+                                <a class="nav-link" href="corporativo.html">Nuestra historia</a>
                             </li>
                             <li>
                                 <a class="nav-link" href="compromiso.html">Nuestro compromiso legal</a>
@@ -121,7 +121,7 @@
                         </li>
 
                         <li>
-                            <a class="h-100 p-2" href="Servicios.html">Servicios Metalurgicos</a>
+                            <a class="h-100 p-2" href="Servicios.html">Servicios Metalúrgicos</a>
                         </li>
 
                     </ul>
@@ -130,7 +130,7 @@
             <!-- fin menu:productos-servicios -->
             <h1 class="text-center my-4">Corporativo</h1>
             <section class="text-center">
-                <iframe width="800" height="450" src="https://www.youtube.com/embed/uy7NSPctxkE?si=BDNwzhFAn9bE7Xd_"
+                <iframe width="80%" height="450px" src="https://www.youtube.com/embed/uy7NSPctxkE?si=BDNwzhFAn9bE7Xd_"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen autoplay>
