--- a/contenido/Servicios.html
+++ b/contenido/Servicios.html
@@ -29,7 +29,7 @@
                     <ul class="py-2">
                         <li class="menu-item">
                             <a class="text-decoration-none" href="corporativo.html">Nuestra
-                                hitoria</a>
+                                historia</a>
                         </li>
                         <li class="menu-item">
                             <a class="text-decoration-none" href="compromiso.html">Nuestro
@@ -79,7 +79,7 @@
                         </a>
                         <ul class="submenu py-2" style="background-color: white;z-index: 100; border: 1px solid;">
                             <li>
-                                <a class="nav-link" href="corporativo.html">Nuestra hitoria</a>
+                                <a class="nav-link" href="corporativo.html">Nuestra historia</a>
                             </li>
                             <li>
                                 <a class="nav-link" href="compromiso.html">Nuestro compromiso legal</a>
@@ -140,7 +140,7 @@
                 <h1 class="text-center mb-5">SERVICIOS METALÚRGICOS</h1>
 
                 <p class="mb-3">
-                    Prestamos servicios metalurgicos para Oro y Plata según aleaciones o requerimientos de nuestros
+                    Prestamos servicios metalúrgicos para Oro y Plata según aleaciones o requerimientos de nuestros
                     clientes.
                 </p>
 
