--- a/contenido/compromiso.html
+++ b/contenido/compromiso.html
@@ -27,7 +27,7 @@
                     <ul class="py-2">
                         <li class="menu-item">
                             <a class="text-decoration-none" href="corporativo.html">
-                                Nuestra hitoria
+                                Nuestra historia
                             </a>
                         </li>
                         <li class="menu-item">
@@ -78,7 +78,7 @@
                         </a>
                         <ul class="submenu py-2" style="background-color: white;z-index: 100; border: 1px solid;">
                             <li>
-                                <a class="nav-link" href="corporativo.html">Nuestra hitoria</a>
+                                <a class="nav-link" href="corporativo.html">Nuestra historia</a>
                             </li>
                             <li>
                                 <a class="nav-link active" href="compromiso.html">Nuestro compromiso legal</a>
@@ -123,7 +123,7 @@
                         </li>
 
                         <li>
-                            <a class="h-100 p-2" href="Servicios.html">Servicios</a>
+                            <a class="h-100 p-2" href="Servicios.html">Servicios Metalúrgicos</a>
                         </li>
 
                     </ul>
