--- a/contenido/corporativo.html
+++ b/contenido/corporativo.html
@@ -27,7 +27,7 @@
                     <ul class="py-2">
                         <li class="menu-item">
                             <a class="text-decoration-none active" href="corporativo.html">Nuestra
-                                hitoria</a>
+                                historia</a>
                         </li>
                         <li class="menu-item">
                             <a class="text-decoration-none" href="compromiso.html">Nuestro
@@ -73,13 +73,13 @@
                         </a>
                         <ul class="submenu py-2" style="background-color: white;z-index: 100; border: 1px solid;">
                             <li>
-                                <a class="nav-link active" href="corporativo.html">Nuestra hitoria</a>
+                                <a class="nav-link active" href="corporativo.html">Nuestra historia</a>
                             </li>
                             <li>
                                 <a class="nav-link" href="compromiso.html">Nuestro compromiso legal</a>
                             </li>
-                            <li class="menu-item">
-                                <a class="text-decoration-none" href="brochure.html">Corporativo</a>
+                            <li>
+                                <a class="nav-link" href="brochure.html">Corporativo</a>
                             </li>
                         </ul>
                     </li>
@@ -113,15 +113,12 @@
                                 </li>
                                 <li>
                                     <a class="nav-link" href="lineaplata.html">Linea de Plata</a>
-                                </li>
-                                <li>
-                                    <a class="nav-link" href="brochure.html">Corporativo</a>
-                                </li>
+                                </li>                               
                             </ul>
                         </li>
 
                         <li>
-                            <a class="h-100 p-2" href="Servicios.html">Servicios Metalurgicos</a>
+                            <a class="h-100 p-2" href="Servicios.html">Servicios Metalúrgicos</a>
                         </li>
 
                     </ul>
