--- a/contenido/lineaoro.html
+++ b/contenido/lineaoro.html
@@ -27,7 +27,7 @@
                     <ul class="py-2">
                         <li class="menu-item">
                             <a class="text-decoration-none" href="corporativo.html">Nuestra
-                                hitoria</a>
+                                historia</a>
                         </li>
                         <li class="menu-item">
                             <a class="text-decoration-none" href="compromiso.html">Nuestro
@@ -75,7 +75,7 @@
                         </a>
                         <ul class="submenu py-2" style="background-color: white;z-index: 100; border: 1px solid;">
                             <li>
-                                <a class="nav-link" href="corporativo.html">Nuestra hitoria</a>
+                                <a class="nav-link" href="corporativo.html">Nuestra historia</a>
                             </li>
                             <li>
                                 <a class="nav-link" href="compromiso.html">Nuestro compromiso legal</a>
