--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <ul class="py-2">
                         <li class="menu-item">
                             <a class="text-decoration-none text-white" href="contenido/corporativo.html">Nuestra
-                                hitoria</a>
+                                historia</a>
                         </li>
                         <li class="menu-item">
                             <a class="text-decoration-none text-white" href="contenido/compromiso.html">Nuestro
@@ -81,7 +81,7 @@
                         </a>
                         <ul class="submenu py-2" style="background-color: white;z-index: 100; border: 1px solid;">
                             <li>
-                                <a class="nav-link" href="contenido/corporativo.html">Nuestra hitoria</a>
+                                <a class="nav-link" href="contenido/corporativo.html">Nuestra historia</a>
                             </li>
                             <li>
                                 <a class="nav-link" href="contenido/compromiso.html">Nuestro compromiso legal</a>
