mas fichas tecnicas

--- a/contenido/brochure.html
+++ b/contenido/brochure.html
@@ -55,8 +55,8 @@
 
     <div class="container p-0">
 
-        <!-- logo-menu -->
-        <header class="d-flex justify-content-between">
+         <!-- logo-menu -->
+         <header class="d-flex justify-content-between">
 
             <a href="../index.html">
                 <img class="w-75" style="margin-left: 20px;" src="../img/LogoValoros.jpg" alt="logo-valoros" />
@@ -76,13 +76,13 @@
                         </a>
                         <ul class="submenu py-2" style="background-color: white;z-index: 100; border: 1px solid;">
                             <li>
-                                <a class="nav-link" href="corporativo.html">Nuestra historia</a>
+                                <a class="nav-link active" href="corporativo.html">Nuestra historia</a>
                             </li>
                             <li>
                                 <a class="nav-link" href="compromiso.html">Nuestro compromiso legal</a>
                             </li>
                             <li>
-                                <a class="nav-link active" href="brochure.html">Corporativo</a>
+                                <a class="nav-link" href="brochure.html">Corporativo</a>
                             </li>
                         </ul>
                     </li>
