--- a/contenido/compromiso.html
+++ b/contenido/compromiso.html
@@ -78,10 +78,10 @@
                         </a>
                         <ul class="submenu py-2" style="background-color: white;z-index: 100; border: 1px solid;">
                             <li>
-                                <a class="nav-link" href="corporativo.html">Nuestra historia</a>
+                                <a class="nav-link active" href="corporativo.html">Nuestra historia</a>
                             </li>
                             <li>
-                                <a class="nav-link active" href="compromiso.html">Nuestro compromiso legal</a>
+                                <a class="nav-link" href="compromiso.html">Nuestro compromiso legal</a>
                             </li>
                             <li>
                                 <a class="nav-link" href="brochure.html">Corporativo</a>
@@ -89,10 +89,10 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fs-4" href="sostenibilidad.html">Sostenibilidad</a>
+                        <a class="nav-link fs-5" href="sostenibilidad.html">Sostenibilidad</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fs-4" href="contacto.html">Contáctenos</a>
+                        <a class="nav-link fs-5" href="contacto.html">Contáctenos</a>
                     </li>
                 </ul>
             </div>
