--- a/contenido/contacto.html
+++ b/contenido/contacto.html
@@ -55,8 +55,8 @@
 
     <div class="container p-0 bg-light">
 
-        <!-- logo-menu -->
-        <header class="d-flex justify-content-between">
+         <!-- logo-menu -->
+         <header class="d-flex justify-content-between">
 
             <a href="../index.html">
                 <img class="w-75" style="margin-left: 20px;" src="../img/LogoValoros.jpg" alt="logo-valoros" />
@@ -67,26 +67,30 @@
                     <img class="w-100" src="../img/menu.svg" alt="menu" /></label>
             </div>
 
+
             <div class="d-none d-sm-flex justify-content-center">
                 <ul class="d-flex h-100">
                     <li class="has-submenu" style="position: relative;">
-                        <a class="nav-link fs-5 d-flex" href="#">Corporativo
+                        <a class="nav-link fs-5 d-flex active" href="#">Corporativo
                             <i class='bx bx-chevron-down fs-2'></i>
                         </a>
                         <ul class="submenu py-2" style="background-color: white;z-index: 100; border: 1px solid;">
                             <li>
-                                <a class="nav-link" href="corporativo.html">Nuestra historia</a>
+                                <a class="nav-link active" href="corporativo.html">Nuestra historia</a>
                             </li>
                             <li>
                                 <a class="nav-link" href="compromiso.html">Nuestro compromiso legal</a>
                             </li>
+                            <li>
+                                <a class="nav-link" href="brochure.html">Corporativo</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fs-4" href="sostenibilidad.html">Sostenibilidad</a>
+                        <a class="nav-link fs-5" href="sostenibilidad.html">Sostenibilidad</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active fs-4" href="contacto.html">Contáctenos</a>
+                        <a class="nav-link fs-5" href="contacto.html">Contáctenos</a>
                     </li>
                 </ul>
             </div>
