--- a/contenido/lineaoro.html
+++ b/contenido/lineaoro.html
@@ -55,8 +55,8 @@
 
     <div class="container p-0">
 
-        <!-- logo-menu -->
-        <header class="d-flex justify-content-between">
+         <!-- logo-menu -->
+         <header class="d-flex justify-content-between">
 
             <a href="../index.html">
                 <img class="w-75" style="margin-left: 20px;" src="../img/LogoValoros.jpg" alt="logo-valoros" />
@@ -67,15 +67,16 @@
                     <img class="w-100" src="../img/menu.svg" alt="menu" /></label>
             </div>
 
+
             <div class="d-none d-sm-flex justify-content-center">
                 <ul class="d-flex h-100">
                     <li class="has-submenu" style="position: relative;">
-                        <a class="nav-link fs-5 d-flex" href="#">Corporativo
+                        <a class="nav-link fs-5 d-flex active" href="#">Corporativo
                             <i class='bx bx-chevron-down fs-2'></i>
                         </a>
                         <ul class="submenu py-2" style="background-color: white;z-index: 100; border: 1px solid;">
                             <li>
-                                <a class="nav-link" href="corporativo.html">Nuestra historia</a>
+                                <a class="nav-link active" href="corporativo.html">Nuestra historia</a>
                             </li>
                             <li>
                                 <a class="nav-link" href="compromiso.html">Nuestro compromiso legal</a>
@@ -86,10 +87,10 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fs-4" href="sostenibilidad.html">Sostenibilidad</a>
+                        <a class="nav-link fs-5" href="sostenibilidad.html">Sostenibilidad</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fs-4" href="contacto.html">Contáctenos</a>
+                        <a class="nav-link fs-5" href="contacto.html">Contáctenos</a>
                     </li>
                 </ul>
             </div>
@@ -152,7 +153,7 @@
 
                         <h5>HILO DE ORO</h5>
                         <p>Disponible a partir de Enero 2024</p>
-                        <p>Consulte información tecnica</p>                            
+                        <a href="../pdf/Ficha Seguridad Oro.pdf" target="_blank">Consulte información técnica</a>                           
                         
                     </div>
                     <div class="col-12 col-sm-6">
