--- a/contenido/lineaplata.html
+++ b/contenido/lineaplata.html
@@ -55,8 +55,8 @@
 
     <div class="container p-0">
 
-        <!-- logo-menu -->
-        <header class="d-flex justify-content-between">
+         <!-- logo-menu -->
+         <header class="d-flex justify-content-between">
 
             <a href="../index.html">
                 <img class="w-75" style="margin-left: 20px;" src="../img/LogoValoros.jpg" alt="logo-valoros" />
@@ -71,23 +71,26 @@
             <div class="d-none d-sm-flex justify-content-center">
                 <ul class="d-flex h-100">
                     <li class="has-submenu" style="position: relative;">
-                        <a class="nav-link fs-5 d-flex" href="#">Corporativo
+                        <a class="nav-link fs-5 d-flex active" href="#">Corporativo
                             <i class='bx bx-chevron-down fs-2'></i>
                         </a>
                         <ul class="submenu py-2" style="background-color: white;z-index: 100; border: 1px solid;">
                             <li>
-                                <a class="nav-link" href="corporativo.html">Nuestra historia</a>
+                                <a class="nav-link active" href="corporativo.html">Nuestra historia</a>
                             </li>
                             <li>
                                 <a class="nav-link" href="compromiso.html">Nuestro compromiso legal</a>
                             </li>
+                            <li>
+                                <a class="nav-link" href="brochure.html">Corporativo</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fs-4" href="sostenibilidad.html">Sostenibilidad</a>
+                        <a class="nav-link fs-5" href="sostenibilidad.html">Sostenibilidad</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fs-4" href="contacto.html">Contáctenos</a>
+                        <a class="nav-link fs-5" href="contacto.html">Contáctenos</a>
                     </li>
                 </ul>
             </div>
@@ -145,7 +148,7 @@
                             Anodo de Plata según especificación del cliente
                             Pureza de 99,99 certificada                            
                         </P>
-                        <p>Consulte información técnica</p>
+                        <a href="../pdf/Ficha de Seguridad Plata Metal.pdf" target="_blank">Consulte información técnica</a>
 
                         <h5 class="mt-3">CIANURO DE PLATA</h5>
                         <P>
@@ -175,9 +178,9 @@
                     <div class="col-12 col-sm-6">
                         <h5>HILO DE PLATA</h5>
                         <P>
-                            Disponible a partir de Enero 2024
-                            Consulte información técnica
+                            Disponible a partir de Enero 2024                           
                         </P>
+                        <a href="../pdf/Ficha de Seguridad Plata Metal.pdf" target="_blank">Consulte información técnica</a>
 
                         <h5 class="mt-3">NITRATO DE PLATA</h5>
                         <P>
