--- a/contenido/contacto.html
+++ b/contenido/contacto.html
@@ -173,13 +173,28 @@
                         <p><img src="../img/call.png" alt=""> Tel/wp: +57 3012784797</p>
                         <p><img src="../img/email.png" alt=""> info@valoros.co</p>
 
-                        <div>
+                        <!-- <div>
                             <div class="social_div">
                                 <a href="#"><img style="width: 30px;" src="../img/facebook.svg" alt="facebook" /></a>
                                 <a href="#"><img style="width: 30px;" src="../img/insta.svg" alt="whatsapp" /></a>
                                 <a href="#"><img style="width: 30px;" src="../img/whatsapp-black.svg"
                                         alt="whatsapp" /></a>
                             </div>
+                        </div> -->
+
+                        <div>                         
+                            <a href="https://www.facebook.com/valorosdecolombia?mibextid=LQQJ4d" target="_blank" style="color:transparent">
+                                <i class='bx bxl-facebook-square text-dark fs-2'></i>
+                            </a>
+                            <a style="color:transparent" target="_blank" href="https://wa.me/+573012784797/?text=Hola, quiero conocer más de los servicios">                           
+                                <i class='bx bxl-whatsapp text-dark fs-2'></i>
+                            </a>    
+                            <!-- <a href="#" style="color:transparent">
+                                <i class='bx bxl-whatsapp text-white fs-2'></i>
+                            </a> -->
+                            <a href="https://instagram.com/valoroscolombia?igshid=MzRlODBiNWFlZA==" style="color:transparent" target="_blank">
+                                <i class='bx bxl-instagram-alt text-dark  fs-2'></i>
+                            </a>
                         </div>
 
                         <!-- croquis -->
