--- a/index.html
+++ b/index.html
@@ -186,13 +186,13 @@
                         <h3 class="text-center" style="color: #F3B830;">Contacta con nosotros</h3>
 
                         <div class="text-center">                          
-                            <a href="#" style="color:transparent">
+                            <a href="https://www.facebook.com/valorosdecolombia?mibextid=LQQJ4d" target="_blank" style="color:transparent">
                                 <i class='bx bxl-facebook-square text-white fs-2'></i>
                             </a>
-                            <a href="#" style="color:transparent">
+                            <a style="color:transparent" target="_blank" href="https://wa.me/+573012784797/?text=Hola, quiero conocer más de los servicios">                           
                                 <i class='bx bxl-whatsapp text-white fs-2'></i>
                             </a>
-                            <a href="#" style="color:transparent">
+                            <a href="https://instagram.com/valoroscolombia?igshid=MzRlODBiNWFlZA==" style="color:transparent" target="_blank">
                                 <i class='bx bxl-instagram-alt text-white fs-2'></i>
                             </a>
                         </div>
