--- a/contenido/lineaoro.html
+++ b/contenido/lineaoro.html
@@ -14,8 +14,8 @@
 
 <body>
 
-     <!-- aside oculto -->
-     <div>
+    <!-- aside oculto -->
+    <div>
         <input type="checkbox" id="menu-bar" />
         <aside class="aside d-flex">
 
@@ -55,8 +55,8 @@
 
     <div class="container p-0">
 
-         <!-- logo-menu -->
-         <header class="d-flex justify-content-between">
+        <!-- logo-menu -->
+        <header class="d-flex justify-content-between">
 
             <a href="../index.html">
                 <img class="w-75" style="margin-left: 20px;" src="../img/LogoValoros.jpg" alt="logo-valoros" />
@@ -71,12 +71,12 @@
             <div class="d-none d-sm-flex justify-content-center">
                 <ul class="d-flex h-100">
                     <li class="has-submenu" style="position: relative;">
-                        <a class="nav-link fs-5 d-flex active" href="#">Corporativo
+                        <a class="nav-link fs-5 d-flex" href="#">Corporativo
                             <i class='bx bx-chevron-down fs-2'></i>
                         </a>
                         <ul class="submenu py-2" style="background-color: white;z-index: 100; border: 1px solid;">
                             <li>
-                                <a class="nav-link active" href="corporativo.html">Nuestra historia</a>
+                                <a class="nav-link" href="corporativo.html">Nuestra historia</a>
                             </li>
                             <li>
                                 <a class="nav-link" href="compromiso.html">Nuestro compromiso legal</a>
@@ -139,13 +139,14 @@
                 </p>
 
                 <div class="row">
+
                     <div class="col-12 col-sm-6">
                         <h5>ORO</h5>
-                        <P >
+                        <P>
                             Oro en barra, lamina o granulado.
-                            Pureza de 99,99 certificada.                                                   
+                            Pureza de 99,99 certificada.
                         </P>
-                        <a href="../pdf/Ficha Seguridad Oro.pdf" target="_blank">Consulte información técnica</a>     
+                        <a href="../pdf/Ficha Seguridad Oro.pdf" target="_blank">Consulte información técnica</a>
 
                         <h5 class="mt-4">CIANURO DE ORO POTASIO</h5>
                         <P>Disponible a partir de Enero 2024</P>
@@ -153,14 +154,31 @@
 
                         <h5>HILO DE ORO</h5>
                         <p>Disponible a partir de Enero 2024</p>
-                        <a href="../pdf/Ficha Seguridad Oro.pdf" target="_blank">Consulte información técnica</a>                           
-                        
+                        <a href="../pdf/Ficha Seguridad Oro.pdf" target="_blank">Consulte información técnica</a>
+
+                        <div class="d-flex justify-content-center">
+                            <div class="call-to-action my-4 bg-light rounded p-2 shake-horizontal">
+
+                                <a style="color:transparent" target="_blank"
+                                    href="https://wa.me/+573012784797/?text=Hola, quiero conocer más sobre los productos de oro">
+                                    <p class="text-dark">Pregunta por la linea de Oro aquí</p>
+                                    <div class="text-center">
+                                        <i class='bx bxl-whatsapp' style="color:rgb(27, 233, 27); font-size: 60px;"></i>
+                                    </div>
+
+                                </a>
+                            </div>
+                        </div>
+
                     </div>
-                    <div class="col-12 col-sm-6">
-                        <img class="w-100 mb-2 rounded" src="../img/IMG_3917.JPEG" alt="">
-                        <img class="w-100 mb-4 rounded" src="../img/3.jpg" alt="">                        
+                    <div class="col-12 col-sm-6 blur-in-expand">
+                            <img class="w-100 mb-2 rounded" src="../img/IMG_3917.JPEG" alt="">
+                            <img class="w-100 mb-4 rounded" src="../img/3.jpg" alt="">
                     </div>
+
+
                 </div>
+
 
 
 
