--- a/contenido/lineaplata.html
+++ b/contenido/lineaplata.html
@@ -21,7 +21,7 @@
 
             <ul class="w-100 pt-5">
                 <li>
-                    <a class="text-decoration-none" href="#">CORPORATIVO
+                    <a class="text-decoration-none text-white" href="#">CORPORATIVO
                         <i class='bx bx-chevron-down fs-2'></i>
                     </a>
                     <ul class="py-2">
@@ -71,12 +71,12 @@
             <div class="d-none d-sm-flex justify-content-center">
                 <ul class="d-flex h-100">
                     <li class="has-submenu" style="position: relative;">
-                        <a class="nav-link fs-5 d-flex active" href="#">Corporativo
+                        <a class="nav-link fs-5 d-flex" href="#">Corporativo
                             <i class='bx bx-chevron-down fs-2'></i>
                         </a>
                         <ul class="submenu py-2" style="background-color: white;z-index: 100; border: 1px solid;">
                             <li>
-                                <a class="nav-link active" href="corporativo.html">Nuestra historia</a>
+                                <a class="nav-link" href="corporativo.html">Nuestra historia</a>
                             </li>
                             <li>
                                 <a class="nav-link" href="compromiso.html">Nuestro compromiso legal</a>
@@ -116,10 +116,7 @@
                                 </li>
                                 <li>
                                     <a class="nav-link" href="lineaplata.html">Linea de Plata</a>
-                                </li>
-                                <li>
-                                    <a class="nav-link" href="brochure.html">Corporativo</a>
-                                </li>
+                                </li>                               
                             </ul>
                         </li>
 
@@ -203,6 +200,20 @@
                         <img class="w-100 rounded" src="../img/IMG_9784.JPG" alt="">
                     </div>
 
+                </div>
+
+                <div class="d-flex justify-content-center">
+                    <div class="call-to-action my-4 bg-light rounded p-2 shake-horizontal">
+                        
+                        <a style="color:transparent" target="_blank"
+                            href="https://wa.me/+573012784797/?text=Hola, quiero conocer más sobre los productos de plata">
+                            <p class="text-dark">Pregunta por la linea de Plata aquí</p>
+                            <div class="text-center">
+                                <i class='bx bxl-whatsapp' style="color:rgb(27, 233, 27); font-size: 60px;"></i>
+                            </div>
+                            
+                        </a>
+                    </div>
                 </div>
 
             </section>
