--- a/index.html
+++ b/index.html
@@ -189,8 +189,9 @@
                             <a href="https://www.facebook.com/valorosdecolombia?mibextid=LQQJ4d" target="_blank" style="color:transparent">
                                 <i class='bx bxl-facebook-square text-white fs-2'></i>
                             </a>
+                            
                             <a style="color:transparent" target="_blank" href="https://wa.me/+573012784797/?text=Hola, quiero conocer más de los servicios">                           
-                                <i class='bx bxl-whatsapp text-white fs-2'></i>
+                                <i class='bx bxl-whatsapp fs-2' style="color:rgb(27, 233, 27)"></i>
                             </a>
                             <a href="https://instagram.com/valoroscolombia?igshid=MzRlODBiNWFlZA==" style="color:transparent" target="_blank">
                                 <i class='bx bxl-instagram-alt text-white fs-2'></i>
